<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0DE115"
    android:orientation="vertical"
    tools:context=".DashBoard">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/test_page"
        android:textAlignment="center"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etHist"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="#E1000000"
            android:hint="العلامة"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="25sp"
            />
        <TextView
            android:id="@+id/tvHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/History_grade"
            android:textAlignment="textStart"
            android:padding="10dp"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etMdniat"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="#E1000000"
            android:hint="العلامة"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="25sp"
            />
        <TextView
            android:id="@+id/text_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/Madniat_grade"
            android:textAlignment="textStart"
            android:padding="10dp"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etGeo"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="#E1000000"
            android:hint="العلامة"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="25sp"
            />
        <TextView
            android:id="@+id/text_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/Geography_grade"
            android:textAlignment="textStart"
            android:padding="10dp"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etReleg"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="#E1000000"
            android:hint="العلامة"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="25sp"
            />
        <TextView
            android:id="@+id/text_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/Releage_grade"
            android:textAlignment="textStart"
            android:padding="10dp"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etArab"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="#E1000000"
            android:hint="العلامة"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="25sp"
            />
        <TextView
            android:id="@+id/text_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/Arabic_grade"
            android:textAlignment="textStart"
            android:padding="10dp"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etHeb"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="#E1000000"
            android:hint="العلامة"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="25sp"
            />
        <TextView
            android:id="@+id/text_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/Hebrew_grade"
            android:textAlignment="textStart"
            android:padding="10dp"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etBio"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="#E1000000"
            android:hint="العلامة"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="25sp"
            />
        <TextView
            android:id="@+id/text_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/Biology_grade"
            android:textAlignment="textStart"
            android:padding="10dp"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etChemist"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="#E1000000"
            android:hint="العلامة"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="25sp"
            />
        <TextView
            android:id="@+id/text_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/Chimistry_grade"
            android:textAlignment="textStart"
            android:padding="10dp"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etPhisic"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="#E1000000"
            android:hint="العلامة"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="25sp"
            />
        <TextView
            android:id="@+id/text_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/Phisics_grade"
            android:textAlignment="textStart"
            android:padding="10dp"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etEng"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="#E1000000"
            android:hint="العلامة"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="25sp" />
        <Spinner
            android:id="@+id/spinner_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#E1000000"
            android:gravity="center"
            android:textDirection="anyRtl" />
        <TextView
            android:id="@+id/text_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/English_grade"
            android:textAlignment="textStart"
            android:padding="10dp"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etMath"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="#E1000000"
            android:hint="العلامة"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="25sp" />
        <Spinner
            android:id="@+id/spinner_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#E1000000"
            android:gravity="center"
            android:textDirection="anyRtl" />
        <TextView
            android:id="@+id/text_10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/Math_grade"
            android:textAlignment="textStart"
            android:padding="10dp"
            android:textSize="25sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="حساب المعدل"
        android:textSize="25sp"
        android:layout_gravity="center"/>

</LinearLayout>